<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Add necessary string values -->
    <string name="ballot_image">ballot image</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="use_my_location">Use My Location</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="www_icon">WWW Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="loading_status">Loading Status</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="election_information">Election Information</string>
    <string name="select_a_state">Select a State!</string>
    <string name="no_data">No Data</string>
    <string name="permission_denied_explanation">
        You need to grant location permission to get current location.
    </string>
    <string name="settings">Settings</string>

</resources>
