<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/representativePhoto"
            android:layout_width="@dimen/profile_pic_size"
            android:layout_height="@dimen/profile_pic_size"
            profileImage="@{representative.official.photoUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile"
            android:contentDescription="@string/profile_icon" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/representativePhoto"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Designation" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintStart_toStartOf="@+id/title_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            tools:text="Name" />

        <TextView
            android:id="@+id/party_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{representative.official.party}"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/wwwIcon"
            app:layout_constraintStart_toStartOf="@+id/name_tv"
            app:layout_constraintTop_toBottomOf="@+id/name_tv"
            tools:text="Party" />

        <ImageView
            android:id="@+id/wwwIcon"
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintTop_toTopOf="@+id/facebookIcon"
            app:srcCompat="@drawable/ic_www"
            android:contentDescription="@string/www_icon" />

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
            app:layout_constraintTop_toTopOf="@+id/twitterIcon"
            app:srcCompat="@drawable/ic_facebook"
            android:contentDescription="@string/facebook_icon" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            app:layout_constraintBottom_toBottomOf="@+id/party_tv"
            app:layout_constraintEnd_toEndOf="@+id/title_tv"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            app:srcCompat="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>